// Copyright 2018 Cochlear.ai All Rights Reserved.
//

syntax = "proto3";
package cochlear.ai;

message input {
    bytes data = 1;
    string subtask = 2;
    string apikey = 3;
    string format = 4;
    string dtype = 5;
    int32 sr = 6;    
}

message output {
    string pred = 7;
}

service cochlear_sense {

    // Async functions (8 functions)

    rpc event(stream input) returns (output) {}
    rpc age_gender(stream input) returns (output) {}
    rpc music_key(stream input) returns (output) {}
    rpc music_tempo(stream input) returns (output) {}
    rpc music_genre(stream input) returns (output) {}
    rpc music_mood(stream input) returns (output) {}
    
    rpc music_detector(stream input) returns (output) {} 
    rpc speech_detector(stream input) returns (output) {}

    // Streaming functions (6 functions)

    rpc event_stream(stream input) returns (stream output) {}
    rpc age_gender_stream(stream input) returns (stream output) {}
    rpc music_genre_stream(stream input) returns (stream output) {}
    rpc music_mood_stream(stream input) returns (stream output) {}
    rpc music_detector_stream(stream input) returns (stream output) {}
    rpc speech_detector_stream(stream input) returns (stream output) {}

}